<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editconfrmpwd" />


        <LinearLayout
            android:layout_width="441dp"
            android:layout_height="61dp"
            android:layout_marginTop="660dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/radiogroupgender">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:text="@string/male"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="71dp"
                    tools:layout_editor_absoluteY="813dp" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:text="@string/female"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="210dp"
                    tools:layout_editor_absoluteY="811dp" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/headregister"
            android:layout_width="338dp"
            android:layout_height="81dp"
            android:layout_marginTop="50dp"
            android:foregroundGravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/headRegister"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/full_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headregister" />

        <EditText
            android:id="@+id/editfullname"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <TextView
            android:id="@+id/age"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="Age"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editfullname" />

        <EditText
            android:id="@+id/editage"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_age"
            android:inputType="numberSigned"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <TextView
            android:id="@+id/email"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="Email"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editage" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="Gender"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editemail" />

        <TextView
            android:id="@+id/pwd"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="100dp"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender" />

        <EditText
            android:id="@+id/editpwd"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd" />

        <TextView
            android:id="@+id/confrmpwd"
            android:layout_width="270dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editpwd" />

        <EditText
            android:id="@+id/editconfrmpwd"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/please_confirm_your_password"
            android:inputType="text"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confrmpwd" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>